Stoolball.Web/wwwroot/css/scorecards.scss
/* ... */
@media screen and (min-width: 655px) {

    // The fourth column can now move out of the stack.
    // Restore its padding to separate it from the final column.
    .bowling-scorecard-editor__no-balls[data-stackable] {
        @include table-as-cards-reset-stackable;
        @include table-as-cards-unstacked;
    }

    // Only one column left in the stack, so restore the stack to an ordinary column.
    .bowling-scorecard-editor__runs[data-stackable] {
        @include table-as-cards-reset-stackable;
    }

    // Restore the header too. Its padding has been removed to match that in cells, 
    // but add it in the first column to separate from the edge of the background colour.
    .bowling-scorecard-editor thead {
        @include table-as-cards-reset-thead;
    }

    .bowling-scorecard-editor__header:first-child {
        @include table-as-cards-reset-padding-first-header;
    }

    // Since the header is back, all substitute labels can be hidden
    .bowling-scorecard-editor .table-as-cards__label {
        @include table-as-cards-reset-label;
    }
}

@media screen and (min-width: 715px) {
    // There's now enough room to restore the padding
    .bowling-scorecard-editor__header, .bowling-scorecard-editor__field {
        @include table-as-cards-reset-padding-all;
    }

    // Adjust the 'Add over' button to match
    .bowling-scorecard-editor__add-over {
        margin-left: $table-cell-padding;
    }
}

